src/screens/HomeScreen/HomeScreen.module.css
.hero_section {
  padding-top: 4.375rem;
  /* border: 1px solid magenta; */
}

.carousel_image {
  width: 100%;
  object-fit: cover;
}

.carousel_caption {
  position: absolute;
  /* bottom: 40vh; */
  top: 0;
}

.image_large_screen {
  height: calc(100vh - 70px);
}

.image_small_screen {
  height: calc(100vh - 140px);
}

.next_icon,
.prev_icon {
  transition: transform 300ms ease-in-out;
}

.next_icon:hover {
  transform: translateX(3px);
}

.prev_icon:hover {
  transform: translateX(-3px);
}

.rotated_text {
  position: absolute;
  bottom: 30px;
  z-index: 8;
  left: 50%;
  transform: translateX(-50%) rotate(-90deg);
  color: #50d450;
  text-transform: uppercase;
  font-size: 0.7rem;
  font-weight: 700;
  /* border: 1px solid magenta; */
}

.social_icons {
  position: fixed;
  right: 8px;
  bottom: 5rem;
  z-index: 3;
}

/* Video section */
.section_heading {
  font-size: 2rem;
  max-width: 40rem;
  margin-left: 1rem;
  color: #000;
}

.video_section {
  overflow: hidden;
  width: 100%;
  background-color: #000;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  object-fit: cover;
}

.video_container {
  max-width: 60rem;
  margin: 4rem auto 6rem;
}

.video {
  margin: 1rem;
  padding: 0.1rem;
  max-height: 80vh;
  border: 1px solid #000;
  box-shadow: 6px 6px 6px #000;
}

